Fixed image names

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@
                   "BWALLER_URL" : "${{ secrets.BWALLER_URL }}",
                   "DDSDDATA_GIT" : "${{ secrets.DDSDDATA_GIT }}",
                   "DDSDRUN_DOCKER_IMAGE" : "${{ secrets.DDSDRUN_DOCKER_IMAGE }}",
+                  "DDSDRUN_DOCKER_IMAGE_OLD" : "${{ secrets.DDSDRUN_DOCKER_IMAGE_OLD }}",
                   "DOCKER_PASS" : "${{ secrets.DOCKER_PASS }}",
                   "DOCKER_USER" : "${{ secrets.DOCKER_USER }}"
                },
