--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,6 @@
                   "DDSDDATA_GIT" : "${{ secrets.DDSDDATA_GIT }}",
                   "DDSDRUN_BUILD_MAIN" : "${{ secrets.DDSDRUN_BUILD_MAIN }}",
                   "DDSDRUN_DOCKER_IMAGE" : "${{ secrets.DDSDRUN_DOCKER_IMAGE }}",
-                  "DDSDRUN_DOCKER_IMAGE_OLD" : "${{ secrets.DDSDRUN_DOCKER_IMAGE_OLD }}",
                   "DOCKER_PASS" : "${{ secrets.DOCKER_PASS }}",
                   "DOCKER_USER" : "${{ secrets.DOCKER_USER }}"
                },
@@ -46,6 +45,11 @@
    "name" : "test",
    "on" : {
       "push" : {
-      }
+      },
+      "schedule" : [
+         {
+            "cron" : "24 3 * * *"
+         }
+      ]
    }
 }
